# grpc-go-for-professionals

./: .gitignore  README.md  wrappers.proto
account/: commands.md  go.mod  main.go
account/proto/: account.proto  accounts.proto
bazel.config/: WORKSPACE.bazel
dummy/: commands.md  deps.bzl
dummy/client/: BUILD.bazel  go.mod  main.go
dummy/proto/: BUILD.bazel  dummy.proto  go.mod
dummy/server/: BUILD.bazel  go.mod
todo/: commands.md  versions.bzl
todo/client/: BUILD.bazel  Dockerfile  go.mod  interceptors.go  main.go
todo/k8s/: client.yaml  server.yaml
todo/proto/: go.mod
todo/proto/v1/: BUILD.bazel  todo.proto
todo/proto/v2/: BUILD.bazel  todo.proto
todo/server/: BUILD.bazel  Dockerfile  go.mod  impl.go  in_memory.go  main.go  server.go
