load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = [
        "db.go",
        "impl.go",
        "in_memory.go",
        "main.go",
        "server.go",
    ],
    importpath = "github.com/PacktPublishing/gRPC-Go-for-Professionals/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/v2:proto",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//types/known/fieldmaskpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
